--- a/app/assets/stylesheets/dmpopidor/_news.scss
+++ b/app/assets/stylesheets/dmpopidor/_news.scss
@@ -92,45 +92,54 @@ article.news-item {
   grid-template-columns: 5fr 0.1fr;
   transition: all ease-in-out .7s;
 
+  @media (max-width: 767px) {
+    margin: auto;
+    left: 0;
+  }
+
+  @media (max-width: 575px) {
+    display: none;
+  }
+
   i {
-      animation: beat 2s ease-in-out infinite;
-      font-size: 2.5em;
-      grid-column-start: 2;
-      grid-column-end: 3;
-      grid-row-start: 1;
-      grid-row-end: 3;
-      align-self: center;
-      color: $white;
+    animation: beat 2s ease-in-out infinite;
+    font-size: 2.5em;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    align-self: center;
+    color: $white;
   }
 
   p {
-      color: $white;
-      grid-column: 1/2;
+    color: $white;
+    grid-column: 1/2;
   }
 
   h2 {
-      grid-column: 1/2;
-      margin-right: 20px;
-      color: $white;
-      font-weight: bold;
+    grid-column: 1/2;
+    margin-right: 20px;
+    color: $white;
+    font-weight: bold;
   }
 
   @keyframes beat {
-      0% {
-          transform: scale(1);
-      }
+    0% {
+      transform: scale(1);
+    }
 
-      50% {
-          transform: scale(1.25);
-      }
+    50% {
+      transform: scale(1.25);
+    }
 
-      100% {
-          transform: scale(1);
-      }
+    100% {
+      transform: scale(1);
+    }
   }
 
   &:hover {
-      transform: translateY(-15px);
+    transform: translateY(-15px);
   }
 }
 
