general setup styling

--- a/app/views/branded/layouts/react_application.html.erb
+++ b/app/views/branded/layouts/react_application.html.erb
@@ -43,7 +43,7 @@
 
     <!-- header rendering -->
     <header>
-      <%= render partial: "layouts/header" %>
+      <%= render partial: "layouts/header_reactapp" %>
       <%= render partial: "layouts/notifications", locals: local_assigns %>
     </header>
 
