--- a/react-client/src/App.css
+++ b/react-client/src/App.css
@@ -1,6 +1,4 @@
-#App {
-  text-align: center;
-}
+#App {}
 
 .App-logo {
   height: 40vmin;
@@ -32,6 +30,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
