--- a/react-client/src/index.scss
+++ b/react-client/src/index.scss
@@ -65,6 +65,11 @@ code {
 
 #App {
 
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+
+
   h1,
   h2,
   h3,
@@ -222,16 +227,26 @@ body {
 
 .step-status {
   padding: 0.3rem 1rem;
-  background: #eee;
+  background: var(--dmpui-brand-gray-100);
   border-radius: 20px;
   font-size: 1rem;
-  color: #05042e;
+  font-weight: 700;
+  line-height: normal;
+  color: var(--dmpui-brand-blue-900);
+  text-transform: uppercase;
 
   &.status-completed {
-    background-color: #ffc845;
+    background-color: var(--dmpui-brand-yellow-500);
+    color: var(--dmpui-brand-blue-900);
   }
 
   &.status-recommended {
-    background-color: #54d8ff;
+    background-color: var(--dmpui-brand-blue-400);
+    color: var(--dmpui-brand-blue-900);
+  }
+
+  &.status-notstart {
+    background-color: var(--dmpui-brand-blue-900);
+    color: var(--dmpui-brand-blue-400);
   }
 }
