--- a/app/assets/stylesheets/dmpopidor.scss
+++ b/app/assets/stylesheets/dmpopidor.scss
@@ -30,6 +30,12 @@
 @use './dmpopidor/font_size' as *;
 @use './dmpopidor/signin_form' as *;
 @use './dmpopidor/back_to_top' as *;
+@use './dmpopidor/contact_us' as *;
+@use './dmpopidor/cookiebanner' as *;
+@use './dmpopidor/share_form' as *;
+@use './dmpopidor/beta_ribbons' as *;
+@use './dmpopidor/import_plan' as *;
+@use './dmpopidor/sweet_alert' as *;
 
 body {
   display: flex;
@@ -47,115 +53,6 @@ body div a.btn {
 
 #header-signin {
   z-index: 7;
-}
-
-/*
-    DROPDOWNS
-*/
-#admin-dropdown,
-.plan-actions {
-
-  .dmpopidor-dropdown {
-    background-color: $white;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px;
-
-    li {
-
-      a,
-      a:active,
-      a:focus,
-      a:visited {
-        color: $blue;
-
-      }
-
-      a:hover {
-        color: $white;
-        background-color: $blue;
-      }
-    }
-
-    li.active {
-
-      a,
-      a:active,
-      a:focus,
-      a:visited {
-        background-color: $blue;
-        color: $white;
-      }
-    }
-  }
-
-  .open {
-    a {
-      background-color: $white;
-    }
-  }
-}
-
-#admin-dropdown {
-  .dmpopidor-dropdown {
-    li.active {
-
-      a,
-      a:active,
-      a:focus,
-      a:visited {
-        background-color: $rust;
-        color: $white;
-      }
-    }
-  }
-}
-
-ul.nav li ul.dropdown-menu {
-  border-radius: 5px !important;
-
-  li {
-    a {
-      text-align: left;
-    }
-
-    a.dropdown-toggle {
-
-      &:focus,
-      &:active,
-      &:visited {
-        background-color: none;
-      }
-    }
-
-    &:first-child {
-      border-radius: 5px 5px 0 0;
-
-      @media (min-width: 768px) {
-        a {
-          border-radius: inherit;
-
-          &:hover {
-            border-radius: inherit;
-          }
-        }
-      }
-    }
-
-    &:last-child {
-      border-radius: 0 0 5px 5px;
-
-      a {
-        border-radius: inherit;
-
-        &:hover {
-          border-radius: inherit;
-        }
-      }
-    }
-  }
-}
-
-.delimiter {
-  padding: 0 10px;
 }
 
 /*
@@ -400,264 +297,5 @@ ul.nav li ul.dropdown-menu {
     .registry-value-actions a {
       text-decoration: none;
     }
-  }
-
-}
-
-
-/*
-    CIL MESSAGE
-*/
-
-.cil_message>p {
-  font-size: x-small;
-  font-style: italic;
-  line-height: 1.5em;
-  padding-bottom: 4px;
-}
-
-.institution-login i {
-  display: inline-block;
-  padding-left: 5px;
-  transform: scaleX(-1);
-  -webkit-transform: scaleX(-1);
-  -moz-transform: scaleX(-1);
-  -o-transform: scaleX(-1);
-}
-
-/* 
-    CONTACT US
-*/
-.dmpopidor-contact-us {
-  .column-right {
-    border-left: 2px solid $rust;
-  }
-
-}
-
-
-/* 
-    COOKIE BANNER
-*/
-
-.cookiebanner {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  text-align: left !important;
-  z-index: 2550 !important;
-}
-
-.cookiebanner-close {
-  width: 50%;
-  text-align: center;
-  background: green;
-  padding: 5px;
-  color: $white !important;
-  font-weight: bold;
-  margin-left: 10px;
-
-  &:focus,
-  &:hover,
-  &:active {
-    outline-style: solid !important;
-    outline-color: $white !important;
-    outline-width: 2px !important;
-  }
-}
-
-/*
-    PLAN CREATION
-*/
-#maincontent {
-  div.tab-content {
-    display: flex;
-    flex-direction: column;
-
-    &>div {
-
-      &:not(#sign-in-form):not(#create-account-form) {
-
-        div {
-          h1 {
-            margin: 30px;
-          }
-
-          div.plan-details {
-            &>div {
-
-              &:first-of-type {
-                display: grid;
-                grid-template-rows: .1fr 2fr;
-                grid-gap: 20px;
-              }
-
-              .anr-import {
-                grid-column-start: 1;
-                grid-column-end: 3;
-              }
-
-              .project-meta {
-                height: max-content;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-
-  div.sign-in {
-    div.tab-content {
-      display: flex;
-      flex-direction: row;
-    }
-  }
-}
-
-
-.plan-form {
-  .tab-content {
-    padding: 25px 25px 50px 25px;
-    border: 1px solid $blue;
-  }
-
-  .form-tabs {
-    display: flex;
-    flex: 1;
-
-    li>span {
-      display: block;
-      padding: 10px 15px;
-      cursor: pointer;
-
-      i {
-        display: none;
-      }
-    }
-
-    li>span:hover,
-    li>span:focus,
-    li.active>span,
-    li.active>span:focus,
-    li.active>span:hover {
-      color: $white;
-      border-bottom-color: transparent;
-      background-color: $white;
-      color: $blue;
-      border: 1px solid $blue;
-      border-bottom-color: transparent;
-
-      i {
-        display: inline;
-      }
-    }
-  }
-
-  #no_org h3 {
-    color: $rust;
-  }
-}
-
-#available-templates {
-  .message-block {
-    color: $blue;
-  }
-}
-
-/*
-    Share Form
-*/
-.share-form {
-  display: flex;
-  flex-direction: column;
-
-  .panel-heading {
-    background-color: $white;
-    color: $rust;
-    border-bottom: 2px solid $rust;
-    border-right: 2px solid $rust;
-
-    .panel-title {
-      color: $rust;
-      font-weight: bold;
-    }
-  }
-
-  #new_role {
-    border-bottom: 0.5px groove $color-border-light;
-  }
-}
-
-/* Beta ribbons */
-
-.corner-ribbon {
-  width: 200px;
-  background: $rust;
-  position: absolute;
-  top: 25px;
-  left: -50px;
-  text-align: center;
-  line-height: 50px;
-  letter-spacing: 1px;
-  color: #f0f0f0;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-
-  &.sticky {
-    position: fixed;
-  }
-
-  &.shadow {
-    box-shadow: 0 0 3px rgba(0, 0, 0, .3);
-  }
-
-  &.top-left {
-    top: 25px;
-    left: -50px;
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-  }
-}
-
-.rda-message {
-  display: none;
-}
-
-/*
-* SweetAlert2
-*/
-.swal2-popup {
-  .swal2-html-container {
-    font-size: 14px;
-  }
-
-  .swal2-actions {
-    .swal2-confirm {
-      background-color: $blue;
-    }
-
-    .swal2-deny {
-      background-color: $rust;
-    }
-  }
-}
-
-/* 
-    LANGUAGE DROPDOWN
-*/
-
-li a[rel="nofollow"][data-method="patch"] {
-
-  &:first-of-type,
-  &:last-of-type {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
-  &:hover {
-    background-color: $dark-blue;
-    color: $white;
   }
 }
