refactor: removing orb in static pages' title

--- a/app/views/branded/plans/_navigation.html.erb
+++ b/app/views/branded/plans/_navigation.html.erb
@@ -81,7 +81,7 @@
     <div class="col-md-12">
       <!-- render the project title -->
       <h1 id="plan-title">
-        <%= plan.title %>  &#x25cf;
+        <%= plan.title %>
       </h1>
     </div>
   </div>
