--- a/app/assets/stylesheets/dmpopidor/_signin_form.scss
+++ b/app/assets/stylesheets/dmpopidor/_signin_form.scss
@@ -41,3 +41,24 @@ div.sign-in {
         }
     }
 }
+
+
+/*
+    CIL MESSAGE
+*/
+
+.cil_message>p {
+    font-size: x-small;
+    font-style: italic;
+    line-height: 1.5em;
+    padding-bottom: 4px;
+  }
+  
+  .institution-login i {
+    display: inline-block;
+    padding-left: 5px;
+    transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+  }
