--- a/app/views/branded/plans/_edit_details.html.erb
+++ b/app/views/branded/plans/_edit_details.html.erb
@@ -18,7 +18,7 @@
         <div class="panel-heading question-text" role="tab" id="heading-plan-project">
           <div class="panel-title pull-left">
             <% I18n.with_locale @plan.template.locale do %>
-              <%= @plan.template.research_project? ? _("Project Details") : _("Structure Details") %>
+              <%= @plan.template.research_project? ? _("Project Details") : _("Research Entity Details") %>
             <% end %>
           </div>
           <i class="fas fa-chevron-down pull-right" aria-hidden="true"></i>
