--- a/app/views/branded/paginable/plans/_publicly_visible.html.erb
+++ b/app/views/branded/paginable/plans/_publicly_visible.html.erb
@@ -2,8 +2,9 @@
   <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col"><%= _('Project Title') %>&nbsp;<%= paginable_sort_link('plans.title') %></th>
+        <th scope="col"><%= _('Plan Title') %>&nbsp;<%= paginable_sort_link('plans.title') %></th>
         <th scope="col"><%= _('Template') %>&nbsp;<%= paginable_sort_link('templates.title') %></th>
+        <th scope="col"><%= _('Research Domains') %></th> 
         <th scope="col"><%= _('Organisation') %></th>
         <th scope="col"><%= _('Owner') %></th>
         <th scope="col" class="date-column">
@@ -15,9 +16,12 @@
     </thead>
     <tbody>
       <% scope.each do |plan| %>
+        <% dmp_fragment = plan.json_fragment %>
+        <% meta = dmp_fragment.meta %>
         <tr class="table-data">
           <td><%= plan.title %></td>
           <td><%= plan.template.title %></td>
+          <td><%= meta.data['dmpKeyword'].join('; ') if meta.data['dmpKeyword'].present? %></td>
           <td><%= (plan.owner.nil? || plan.owner.org.nil? ? _('Not Applicable') : plan.owner.org.name) %></td>
           <td><%= (plan.owner.nil? ? _('Unknown') : plan.owner.name(false)) %></td>
           <td><%= l(plan.updated_at.to_date, formats: :short) %></td>
