--- a/react-client/src/components/forms.scss
+++ b/react-client/src/components/forms.scss
@@ -132,6 +132,14 @@ input[type="submit"] {
 
   input[type="text"],
   input[type="email"],
+  input[type="date"],
+  input[type="datetime-local"],
+  input[type="password"],
+  input[type="number"],
+  input[type="url"],
+  input[type="time"],
+  input[type="tel"],
+  input[type="search"],
   textarea {
     box-sizing: border-box;
     border: 2px solid var(--form-field-border-color);
