work to tie the DMPTool into the new DMPHub system

--- a/app/views/branded/paginable/plans/_org_admin.html.erb
+++ b/app/views/branded/paginable/plans/_org_admin.html.erb
@@ -51,7 +51,7 @@
           <% if has_dmp_id %>
             <td>
               <% if plan.dmp_id.present? %>
-                <%= id_for_display(id: plan.dmp_id, with_scheme_name: false).html_safe %>
+                <%= dmp_id_for_display(dmp_id: plan.dmp_id, without_prefix: true) %>
               <% end %>
             </td>
           <% end %>
