--- a/app/views/branded/shared/export/pdf.erb
+++ b/app/views/branded/shared/export/pdf.erb
@@ -12,7 +12,7 @@
 @selected_phase = selected_phase
 %>
 
-<%= render partial: 'shared/export/plan',
+<%= render partial: 'branded/shared/export/plan',
            locals: {
             font_face: @formatting[:font_face], font_size: @formatting[:font_size],
             margin_top: @formatting[:margin_top], margin_right: @formatting[:margin_right],
